<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_marginTop="6dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:backgroundTint="@color/white"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:padding="5dp"
                android:contentDescription="@string/name"
                android:scaleType="fitCenter"
                android:src="@drawable/placeholder" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/item_color"
                android:paddingStart="8dp"
                android:paddingTop="3dp"
                android:textColor="@color/black"
                android:text="@string/app_name"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />


                <TextView
                    android:id="@+id/color"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@color/item_color"
                    android:textColor="@color/primary"
                    android:paddingStart="8dp"
                    android:paddingTop="3dp"
                    android:text="@string/save"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@color/item_color"
                    android:textColor="@color/primary"
                    android:paddingStart="8dp"
                    android:paddingTop="3dp"
                    android:text="@string/save"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/item_color"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:textColor="@color/reg_color"
                    android:layout_marginBottom="0dp"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:insetBottom="2dp"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:text="@string/up"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:padding="5dp"
                    android:layout_weight="1"
                    android:insetBottom="2dp"
                    android:text="@string/remove"
                    android:textColor="@color/red"
                    android:textAllCaps="false"
                    android:textSize="16sp"

                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>





</androidx.constraintlayout.widget.ConstraintLayout>